--- a/side-nav/Nav/nav.scss
+++ b/side-nav/Nav/nav.scss
@@ -3,4 +3,5 @@
   margin: 0;
   padding: 0;
   cursor: pointer;
+  font-family: Open Sans,Arial,Hiragino Sans GB,Microsoft YaHei,\\5FAE\8F6F\96C5\9ED1,Lantinghei SC,STHeiti,WenQuanYi Micro Hei,SimSun,sans-serif;
 }
