add final style

--- a/side-nav/NavGroup/nav-group.scss
+++ b/side-nav/NavGroup/nav-group.scss
@@ -5,6 +5,10 @@
   font-weight: bold;
 }
 
+.nav-group-title {
+  padding-left: 30px;
+}
+
 .nav-group-item {
   list-style-type: none;
   margin: 0;
