--- a/side-nav/NavItem/nav-item.scss
+++ b/side-nav/NavItem/nav-item.scss
@@ -2,4 +2,8 @@
   background-color: #F5FBFF;
   line-height: 32px;
   padding-left: 30px;
+  border: 1px solid #F5FBFF;
+  &:hover {
+    border: 1px solid #1976D2;
+  }
 }
